@@ -1,3 +1,4 @@
+-The enter and escape keys now work again to close the preview dialog
 -More scheduler tweaks.
 -More in-program help.
 	
